--- a/customer_segments.ipynb
+++ b/customer_segments.ipynb
@@ -2458,7 +2458,9 @@
     "id": "zn1TGVtu0R-O"
    },
    "source": [
-    "**Answer:**"
+    "**Answer:**\n",
+    "\n",
+    "We can take a subset of data points close to the cluster centers to act as representative of their respective clusters, change the delivery frequency on half of the points in the subsets for each cluster, and see how those customers react in comparison to the other customers in their cluster who still have the old delivery frequency. Based on this, we can predict how all customers in each cluster would react to the change in delivery frequency."
    ]
   },
   {
